--- a/shipping/nueva2025/services.html
+++ b/shipping/nueva2025/services.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="./assets/css/plugins.css">
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="./assets/css/colors/red.css">
-    <link rel="preload" href="./assets/css/fonts/urbanist.css" as="style" onload="this.rel='stylesheet'">
+    <link rel="preload" href="./assets/css/fonts/space.css" as="style" onload="this.rel='stylesheet'">
 </head>
 
 <body>
@@ -322,7 +322,7 @@
                     <div class="col-sm-8 col-md-6 col-lg-4 mx-auto">
                         <div class="card shadow-lg">
                             <figure class="card-img-top">
-                                <a><img class="img-fluid" src="./assets/img/photos/ChatGPT Image 23 abr 2025, 12_27_04.png" /></a>
+                                <a><img class="img-fluid" src="./assets/img/photos/ChatGPT Image 23 abr 2025, 12_27_04.jpg" /></a>
                             </figure>
                             <div class="card-body p-6">
                                 <h3 class="fs-21 mb-0">BACK-OFFICE</h3>
