--- a/shipping/nueva2025/clients.html
+++ b/shipping/nueva2025/clients.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="./assets/css/plugins.css">
   <link rel="stylesheet" href="./assets/css/style.css">
   <link rel="stylesheet" href="./assets/css/colors/red.css">
-  <link rel="preload" href="./assets/css/fonts/urbanist.css" as="style" onload="this.rel='stylesheet'">
+  <link rel="preload" href="./assets/css/fonts/space.css" as="style" onload="this.rel='stylesheet'">
 </head>
 
 <body>
@@ -80,49 +80,84 @@
           <div class="col-lg-4 mt-lg-2">
             <h2 class="fs-15 text-uppercase text-muted mb-3">Our Clients</h2>
             <h3 class="display-4 mb-3 pe-xxl-5">Cruises</h3>
-            <p class="lead fs-lg mb-0 pe-xxl-5"></p>
           </div>
           <div class="col-lg-8">
             <div class="row row-cols-2 row-cols-md-4 gx-0 gx-md-8 gx-xl-12 gy-12">
-              <div class="col" style="padding: 10px; box-sizing: border-box;">
-                <img src="./assets/img/brands/royalcaribbean.jpg" alt=""
-                  style="width: 100%; height: auto; display: block;" />
+              <div class="col">
+                <div
+                  style="padding:10px; box-sizing:border-box; display:flex; align-items:center; justify-content:center; height:100px;">
+                  <img src="./assets/img/brands/royalcaribbean.jpg" alt=""
+                    style="max-height:80px; max-width:100%; object-fit:contain; display:block;" />
+                </div>
               </div>
-              <div class="col" style="padding: 10px; box-sizing: border-box;">
-                <img src="./assets/img/brands/celebritycruiseslogo.png" alt=""
-                  style="width: 100%; height: auto; display: block;" />
+              <div class="col">
+                <div
+                  style="padding:10px; box-sizing:border-box; display:flex; align-items:center; justify-content:center; height:100px;">
+                  <img src="./assets/img/brands/celebritycruiseslogo.png" alt=""
+                    style="max-height:80px; max-width:100%; object-fit:contain; display:block;" />
+                </div>
               </div>
-              <div class="col" style="padding: 10px; box-sizing: border-box;">
-                <img src="./assets/img/brands/oceaniacruises.jpg" alt=""
-                  style="width: 100%; height: auto; display: block;" />
+              <div class="col">
+                <div
+                  style="padding:10px; box-sizing:border-box; display:flex; align-items:center; justify-content:center; height:100px;">
+                  <img src="./assets/img/brands/oceaniacruises.jpg" alt=""
+                    style="max-height:80px; max-width:100%; object-fit:contain; display:block;" />
+                </div>
               </div>
-              <div class="col" style="padding: 10px; box-sizing: border-box;">
-                <img src="./assets/img/brands/norweigan.jpg" alt=""
-                  style="width: 100%; height: auto; display: block;" />
+              <div class="col">
+                <div
+                  style="padding:10px; box-sizing:border-box; display:flex; align-items:center; justify-content:center; height:100px;">
+                  <img src="./assets/img/brands/norweigan.jpg" alt=""
+                    style="max-height:80px; max-width:100%; object-fit:contain; display:block;" />
+                </div>
               </div>
-              <div class="col" style="padding: 10px; box-sizing: border-box;">
-                <img src="./assets/img/brands/costa.jpg" alt="" style="width: 100%; height: auto; display: block;" />
+              <div class="col">
+                <div
+                  style="padding:10px; box-sizing:border-box; display:flex; align-items:center; justify-content:center; height:100px;">
+                  <img src="./assets/img/brands/costa.png" alt=""
+                    style="max-height:80px; max-width:100%; object-fit:contain; display:block;" />
+                </div>
               </div>
-              <div class="col" style="padding: 10px; box-sizing: border-box;">
-                <img src="./assets/img/brands/aida.jpg" alt="" style="width: 100%; height: auto; display: block;" />
+              <div class="col">
+                <div
+                  style="padding:10px; box-sizing:border-box; display:flex; align-items:center; justify-content:center; height:100px;">
+                  <img src="./assets/img/brands/aida.png" alt=""
+                    style="max-height:80px; max-width:100%; object-fit:contain; display:block;" />
+                </div>
               </div>
-              <div class="col" style="padding: 10px; box-sizing: border-box;">
-                <img src="./assets/img/brands/japangrace.jpg" alt=""
-                  style="width: 100%; height: auto; display: block;" />
+              <div class="col">
+                <div
+                  style="padding:10px; box-sizing:border-box; display:flex; align-items:center; justify-content:center; height:100px;">
+                  <img src="./assets/img/brands/japangrace.jpg" alt=""
+                    style="max-height:80px; max-width:100%; object-fit:contain; display:block;" />
+                </div>
               </div>
-              <div class="col" style="padding: 10px; box-sizing: border-box;">
-                <img src="./assets/img/brands/azamara.jpg" alt="" style="width: 100%; height: auto; display: block;" />
+              <div class="col">
+                <div
+                  style="padding:10px; box-sizing:border-box; display:flex; align-items:center; justify-content:center; height:100px;">
+                  <img src="./assets/img/brands/azamara.png" alt=""
+                    style="max-height:80px; max-width:100%; object-fit:contain; display:block;" />
+                </div>
               </div>
-              <div class="col" style="padding: 10px; box-sizing: border-box;">
-                <img src="./assets/img/brands/vikingcruises.png" alt=""
-                  style="width: 100%; height: auto; display: block;" />
+              <div class="col">
+                <div
+                  style="padding:0px; box-sizing:border-box; display:flex; align-items:center; justify-content:center; height:100px;">
+                  <img src="./assets/img/brands/vikingcruises.png" alt=""
+                    style="max-height:100px; max-width:100%; object-fit:contain; display:block;" />
+                </div>
+              </div>
+              <div class="col">
+                <div
+                  style="padding:10px; box-sizing:border-box; display:flex; align-items:center; justify-content:center; height:100px;">
+                  <img src="./assets/img/brands/regent.png" alt=""
+                    style="max-height:80px; max-width:100%; object-fit:contain; display:block;" />
+                </div>
               </div>
             </div>
           </div>
         </div>
       </div>
     </section>
-
     <section class="wrapper bg-light">
       <div class="container py-14 py-md-16">
         <div class="row gx-lg-8 gx-xl-12 gy-10 gy-lg-0">
@@ -148,39 +183,51 @@
       <div class="container py-14 py-md-16">
         <div class="row gx-lg-8 gx-xl-12 gy-10 gy-lg-0">
           <div class="col-lg-4 mt-lg-2">
-            <h3 class="display-4 mb-3 pe-xxl-5">Bulkcarriers</h3>
+            <h3 class="display-4 mb-3 pe-xxl-5">Tankers</h3>
           </div>
           <div class="col-lg-8">
             <div class="row row-cols-2 row-cols-md-4 gx-0 gx-md-8 gx-xl-12 gy-12">
-              <div class="col" style="padding: 10px; box-sizing: border-box;">
-                <img src="./assets/img/brands/cosco.jpg" alt="" style="width: 100%; height: auto; display: block;" />
+              <div class="col">
+                <div
+                  style="padding:0px; box-sizing:border-box; display:flex; align-items:center; justify-content:center; height:120px;">
+                  <img src="./assets/img/brands/whoship.png" alt=""
+                    style="max-height:100px; max-width:100%; object-fit:contain; display:block;" />
+                </div>
               </div>
-              <div class="col" style="padding: 10px; box-sizing: border-box;">
-                <img src="./assets/img/brands/kline.jpg" alt="" style="width: 100%; height: auto; display: block;" />
+              <div class="col">
+                <div
+                  style="padding:15px; box-sizing:border-box; display:flex; align-items:center; justify-content:center; height:120px;">
+                  <img src="./assets/img/brands/sk.png" alt=""
+                    style="max-height:60px; max-width:100%; object-fit:contain; display:block;" />
+                </div>
               </div>
-              <div class="col" style="padding: 10px; box-sizing: border-box;">
-                <img src="./assets/img/brands/norden.png" alt="" style="width: 100%; height: auto; display: block;" />
+              <div class="col">
+                <div
+                  style="padding:0px; box-sizing:border-box; display:flex; align-items:center; justify-content:center; height:120px;">
+                  <img src="./assets/img/brands/nextmaritime.png" alt=""
+                    style="max-height:100px; max-width:100%; object-fit:contain; display:block;" />
+                </div>
               </div>
-              <div class="col" style="padding: 10px; box-sizing: border-box;">
-                <img src="./assets/img/brands/mur.png" alt="" style="width: 100%; height: auto; display: block;" />
+              <div class="col">
+                <div
+                  style="padding:10px; box-sizing:border-box; display:flex; align-items:center; justify-content:center; height:120px;">
+                  <img src="./assets/img/brands/winson.jpg" alt=""
+                    style="max-height:100px; max-width:100%; object-fit:contain; display:block;" />
+                </div>
               </div>
-              <div class="col" style="padding: 10px; box-sizing: border-box;">
-                <img src="./assets/img/brands/spliethoff.jpg" alt=""
-                  style="width: 100%; height: auto; display: block;" />
+              <div class="col">
+                <div
+                  style="padding:10px; box-sizing:border-box; display:flex; align-items:center; justify-content:center; height:120px;">
+                  <img src="./assets/img/brands/torm.png" alt=""
+                    style="max-height:100px; max-width:100%; object-fit:contain; display:block;" />
+                </div>
               </div>
-              <div class="col" style="padding: 10px; box-sizing: border-box;">
-                <img src="./assets/img/brands/andritz.jpg" alt="" style="width: 100%; height: auto; display: block;" />
-              </div>
-              <div class="col" style="padding: 10px; box-sizing: border-box;">
-                <img src="./assets/img/brands/pacificbasin.png" alt=""
-                  style="width: 100%; height: auto; display: block;" />
-              </div>
-              <div class="col" style="padding: 10px; box-sizing: border-box;">
-                <img src="./assets/img/brands/jlauritzen.jpg" alt=""
-                  style="width: 100%; height: auto; display: block;" />
-              </div>
-              <div class="col" style="padding: 10px; box-sizing: border-box;">
-                <img src="./assets/img/brands/hongfa.jfif" alt="" style="width: 100%; height: auto; display: block;" />
+              <div class="col">
+                <div
+                  style="padding:10px; box-sizing:border-box; display:flex; align-items:center; justify-content:center; height:120px;">
+                  <img src="./assets/img/brands/repsol.png" alt=""
+                    style="max-height:80px; max-width:100%; object-fit:contain; display:block;" />
+                </div>
               </div>
             </div>
           </div>
@@ -188,38 +235,98 @@
       </div>
     </section>
 
+
     <section class="wrapper bg-light">
       <div class="container py-14 py-md-16">
         <div class="row gx-lg-8 gx-xl-12 gy-10 gy-lg-0">
           <div class="col-lg-4 mt-lg-2">
-            <h3 class="display-4 mb-3 pe-xxl-5">Hub Agencies</h3>
+            <h3 class="display-4 mb-3 pe-xxl-5">Bulkcarriers & Project Cargo</h3>
           </div>
           <div class="col-lg-8">
             <div class="row row-cols-2 row-cols-md-4 gx-0 gx-md-8 gx-xl-12 gy-12">
-              <div class="col" style="padding: 10px; box-sizing: border-box;">
-                <img src="./assets/img/brands/whoship.png" alt="" style="width: 100%; height: auto; display: block;" />
+              <div class="col">
+                <div
+                  style="padding:0px; box-sizing:border-box; display:flex; align-items:center; justify-content:center; height:120px;">
+                  <img src="./assets/img/brands/oldendorff.png" alt=""
+                    style="max-height:200px; max-width:100%; object-fit:contain; display:block;" />
+                </div>
               </div>
-              <div class="col" style="padding: 10px; box-sizing: border-box;">
-                <img src="./assets/img/brands/noatum.png" alt="" style="width: 100%; height: auto; display: block;" />
+              <div class="col">
+                <div
+                  style="padding:0px; box-sizing:border-box; display:flex; align-items:center; justify-content:center; height:120px;">
+                  <img src="./assets/img/brands/cosco.jpg" alt=""
+                    style="max-height:100px; max-width:100%; object-fit:contain; display:block;" />
+                </div>
               </div>
-              <div class="col" style="padding: 10px; box-sizing: border-box;">
-                <img src="./assets/img/brands/nextmaritime.png" alt=""
-                  style="width: 100%; height: auto; display: block;" />
+              <div class="col">
+                <div
+                  style="padding:10px; box-sizing:border-box; display:flex; align-items:center; justify-content:center; height:120px;">
+                  <img src="./assets/img/brands/kline.jpg" alt=""
+                    style="max-height:100px; max-width:100%; object-fit:contain; display:block;" />
+                </div>
               </div>
-              <div class="col" style="padding: 10px; box-sizing: border-box;">
-                <img src="./assets/img/brands/vship.png" alt="" style="width: 100%; height: auto; display: block;" />
+              <div class="col">
+                <div
+                  style="padding:0px; box-sizing:border-box; display:flex; align-items:center; justify-content:center; height:120px;">
+                  <img src="./assets/img/brands/swire.png" alt=""
+                    style="max-height:100px; max-width:100%; object-fit:contain; display:block;" />
+                </div>
               </div>
-              <div class="col" style="padding: 10px; box-sizing: border-box;">
-                <img src="./assets/img/brands/agunsa.png" alt="" style="width: 100%; height: auto; display: block;" />
+              <div class="col">
+                <div
+                  style="padding:10px; box-sizing:border-box; display:flex; align-items:center; justify-content:center; height:120px;">
+                  <img src="./assets/img/brands/hansa.png" alt=""
+                    style="max-height:100px; max-width:100%; object-fit:contain; display:block;" />
+                </div>
               </div>
-              <div class="col" style="padding: 10px; box-sizing: border-box;">
-                <img src="./assets/img/brands/wallem.png" alt="" style="width: 100%; height: auto; display: block;" />
+              <div class="col">
+                <div
+                  style="padding:10px; box-sizing:border-box; display:flex; align-items:center; justify-content:center; height:120px;">
+                  <img src="./assets/img/brands/bergebulk.png" alt=""
+                    style="max-height:100px; max-width:100%; object-fit:contain; display:block;" />
+                </div>
+              </div>
+              <div class="col">
+                <div
+                  style="padding:10px; box-sizing:border-box; display:flex; align-items:center; justify-content:center; height:120px;">
+                  <img src="./assets/img/brands/norden.png" alt=""
+                    style="max-height:100px; max-width:100%; object-fit:contain; display:block;" />
+                </div>
+              </div>
+              <div class="col">
+                <div
+                  style="padding:0px; box-sizing:border-box; display:flex; align-items:center; justify-content:center; height:120px;">
+                  <img src="./assets/img/brands/mur.png" alt=""
+                    style="max-height:100px; max-width:100%; object-fit:contain; display:block;" />
+                </div>
+              </div>
+              <div class="col">
+                <div
+                  style="padding:10px; box-sizing:border-box; display:flex; align-items:center; justify-content:center; height:120px;">
+                  <img src="./assets/img/brands/jlauritzen.jpg" alt=""
+                    style="max-height:100px; max-width:100%; object-fit:contain; display:block;" />
+                </div>
+              </div>
+              <div class="col">
+                <div
+                  style="padding:10px; box-sizing:border-box; display:flex; align-items:center; justify-content:center; height:120px;">
+                  <img src="./assets/img/brands/pacificbasin.png" alt=""
+                    style="max-height:100px; max-width:100%; object-fit:contain; display:block;" />
+                </div>
+              </div>
+              <div class="col">
+                <div
+                  style="padding:10px; box-sizing:border-box; display:flex; align-items:center; justify-content:center; height:120px;">
+                  <img src="./assets/img/brands/spliethoff.png" alt=""
+                    style="max-height:100px; max-width:100%; object-fit:contain; display:block;" />
+                </div>
               </div>
             </div>
           </div>
         </div>
       </div>
     </section>
+
 
     <section class="wrapper bg-light">
       <div class="container py-14 py-md-16">
@@ -230,17 +337,13 @@
           <div class="col-lg-8">
             <div class="row row-cols-2 row-cols-md-4 gx-0 gx-md-8 gx-xl-12 gy-12">
               <div class="col" style="padding: 10px; box-sizing: border-box;">
-                <img src="./assets/img/brands/drilling.jpg" alt="" style="width: 100%; height: auto; display: block;" />
+                <img src="./assets/img/brands/drilling.jpg" alt="" style="width: 80%; height: auto; display: block;" />
               </div>
               <div class="col" style="padding: 10px; box-sizing: border-box;">
-                <img src="./assets/img/brands/bourbon.jpg" alt="" style="width: 100%; height: auto; display: block;" />
+                <img src="./assets/img/brands/bourbon.jpg" alt="" style="width: 80%; height: auto; display: block;" />
               </div>
-              <div class="col" style="padding: 10px; box-sizing: border-box;">
-                <img src="./assets/img/brands/sk.jpg" alt="" style="width: 100%; height: auto; display: block;" />
-              </div>
-              <div class="col" style="padding: 10px; box-sizing: border-box;">
-                <img src="./assets/img/brands/winson.jpg" alt="" style="width: 100%; height: auto; display: block;" />
-              </div>
+
+
             </div>
           </div>
         </div>
