update justify texts

--- a/shipping/nueva2025/services.html
+++ b/shipping/nueva2025/services.html
@@ -243,7 +243,7 @@
         </section>
         <section class="wrapper image-wrapper bg-image bg-overlay text-white"
             data-image-src="./assets/img/aerial-view-container-cargo-ship-sea (1).jpg">
-            <div class="container py-14 py-md-17 text-center">
+            <div class="container py-14 py-md-17 text-justify">
                 <div class="row mt-3">
                     <div class="col-xl-9 col-xxl-8 mx-auto">
                         <div class="swiper-container dots-light dots-closer mb-6" data-margin="30" data-dots="true">
@@ -283,7 +283,7 @@
         <section class="wrapper bg-light">
             <div class="container py-14 py-md-16">
                 <div class="row">
-                    <div class="col-lg-12 col-xl-10 col-xxl-7 mx-auto text-center">
+                    <div class="col-lg-12 col-xl-10 col-xxl-7 mx-auto text-justify">
                         <i class="uil uil-ship fs-24 opacity-75"></i>
                         <h2 class="display-5 text-center mt-2 mb-10" style="font-size: 1.25rem;">REPREMAR WAS FOUNDED IN
                             1946 AND SINCE THEN IT HAS
@@ -294,14 +294,14 @@
                     <!--/column -->
                 </div>
                 <!--/.row -->
-                <div class="row grid-view gx-md-8 gx-xl-10 gy-8 gy-lg-0 text-center">
+                <div class="row grid-view gx-md-8 gx-xl-10 gy-8 gy-lg-0 text-justify">
                     <div class="col-sm-8 col-md-6 col-lg-4 mx-auto">
                         <div class="card shadow-lg">
                             <figure class="card-img-top">
                                 <a><img class="img-fluid" src="./assets/img/photos/repremar6.jpg" /></a>
                             </figure>
                             <div class="card-body p-6">
-                                <h3 class="fs-21 mb-0">PORT AGENT</h3>
+                                <h3 class="fs-21 mb-0 text-center">PORT AGENT</h3>
                                 <ul class="post-meta fs-16 mb-0">
                                     <li>At all Uruguayan ports and off-shore maritime areas, we provide services for all
                                         type of ships:
@@ -325,8 +325,8 @@
                                 <a><img class="img-fluid" src="./assets/img/photos/ChatGPT Image 23 abr 2025, 12_27_04.jpg" /></a>
                             </figure>
                             <div class="card-body p-6">
-                                <h3 class="fs-21 mb-0">BACK-OFFICE</h3>
-                                <ul class="post-meta fs-16 mb-0">
+                                <h3 class="fs-21 mb-0 text-center">BACK-OFFICE</h3>
+                                <ul class="post-meta fs-16 mb-0 text-justify">
                                     <li>To the liner shipping companies which provide regular line container services,
                                         we offer all type
                                         of back-office services, such as: handling and processing all shipping documents
@@ -350,8 +350,8 @@
                                 <a><img class="img-fluid" src="./assets/img/photos/repremar8.jpg"></a>
                             </figure>
                             <div class="card-body p-6">
-                                <h3 class="fs-21 mb-0">PORT OPERATIONS</h3>
-                                <ul class="post-meta fs-16 mb-0">
+                                <h3 class="fs-21 mb-0 text-center">PORT OPERATIONS</h3>
+                                <ul class="post-meta fs-16 mb-0 text-justify">
                                     <li>Stevedoring, Loading/Discharging vessels,
                                         logistics within Port premises,
                                         Free Port Regime, etc.</li>
