--- a/shipping/nueva2025/index.html
+++ b/shipping/nueva2025/index.html
@@ -127,84 +127,92 @@
     </section>
     <!-- /section -->
     <section class="wrapper bg-light">
-      <div class="container py-14 py-md-16">
-        <div class="row">
-          <div class="col-lg-12 col-xl-10 col-xxl-7 mx-auto text-center">
-            <i class="uil uil-ship fs-50 opacity-75"></i>
-            <h2 class="display-5 text-center mt-2 mb-10">Repremar was founded in 1946 and since then it has been
-              providing ship agency and port services to the leading shipping companies and vessels which operate on the
-              tip of the east coast of south america and the river plate.
-            </h2>
-          </div>
-          <!--/column -->
-        </div>
-        <!--/.row -->
-        <div class="row grid-view gx-md-8 gx-xl-10 gy-8 gy-lg-0 text-center">
-          <div class="col-sm-8 col-md-6 col-lg-4 mx-auto">
-            <div class="card shadow-lg">
-              <figure class="card-img-top">
-                <a><img class="img-fluid" src="./assets/img/photos/repremar6.jpg" /></a>
-              </figure>
-              <div class="card-body p-6">
-                <h3 class="fs-21 mb-0">PORT AGENT</h3>
-                <ul class="post-meta fs-16 mb-0">
-                  <li>At all Uruguayan ports and off-shore maritime areas, we provide services for all type of ships:
-                    container ships, bulk-carriers, cruises, tankers, LNG’s, barges and lighters.
-                    REPREMAR has a well-trained and highly experienced operational staff.
-                    Our services include arrival and dispatch for ships, berth requests, pilotage and tugs services,
-                    crew attendance, repairs and spare parts, supplies, transhipments coordination, medical attention,
-                    bunkering and lubricants.</li>
-                </ul>
-              </div>
-
-              <!--/.card-body -->
+            <div class="container py-14 py-md-16">
+                <div class="row">
+                    <div class="col-lg-12 col-xl-10 col-xxl-7 mx-auto text-justify">
+                        <i class="uil uil-ship fs-24 opacity-75"></i>
+                        <h2 class="display-5 text-center mt-2 mb-10" style="font-size: 1.25rem;">REPREMAR WAS FOUNDED IN
+                            1946 AND SINCE THEN IT HAS
+                            BEEN PROVIDING SHIP AGENCY AND PORT SERVICES TO THE LEADING SHIPPING COMPANIES AND VESSELS
+                            WHICH OPERATE ON THE TIP OF THE EAST COAST OF SOUTH AMERICA AND THE RIVER PLATE.
+                        </h2>
+                    </div>
+                    <!--/column -->
+                </div>
+                <!--/.row -->
+                <div class="row grid-view gx-md-8 gx-xl-10 gy-8 gy-lg-0 text-justify">
+                    <div class="col-sm-8 col-md-6 col-lg-4 mx-auto">
+                        <div class="card shadow-lg">
+                            <figure class="card-img-top">
+                                <a><img class="img-fluid" src="./assets/img/photos/repremar6.jpg" /></a>
+                            </figure>
+                            <div class="card-body p-6">
+                                <h3 class="fs-21 mb-0 text-center">PORT AGENT</h3>
+                                <ul class="post-meta fs-16 mb-0">
+                                    <li>At all Uruguayan ports and off-shore maritime areas, we provide services for all
+                                        type of ships:
+                                        container ships, bulk-carriers, cruises, tankers, LNG’s, barges and lighters.
+                                        REPREMAR has a well-trained and highly experienced operational staff.
+                                        Our services include arrival and dispatch for ships, berth requests, pilotage
+                                        and tugs services,
+                                        crew attendance, repairs and spare parts, supplies, transhipments coordination,
+                                        medical attention,
+                                        bunkering and lubricants.</li>
+                                </ul>
+                            </div>
+                            <!--/.card-body -->
+                        </div>
+                        <!-- /.card -->
+                    </div>
+                    <!--/column -->
+                    <div class="col-sm-8 col-md-6 col-lg-4 mx-auto">
+                        <div class="card shadow-lg">
+                            <figure class="card-img-top">
+                                <a><img class="img-fluid" src="./assets/img/photos/ChatGPT Image 23 abr 2025, 12_27_04.jpg" /></a>
+                            </figure>
+                            <div class="card-body p-6">
+                                <h3 class="fs-21 mb-0 text-center">BACK-OFFICE</h3>
+                                <ul class="post-meta fs-16 mb-0 text-justify">
+                                    <li>To the liner shipping companies which provide regular line container services,
+                                        we offer all type
+                                        of back-office services, such as: handling and processing all shipping documents
+                                        for import/export
+                                        activities, control of equipment and container logistics, collection of freight
+                                        charges and
+                                        remittances, issuance of pro forma invoices for every port of call, accounting
+                                        services, management
+                                        and settlement of accounts, dealing with claims and processing statistical
+                                        reports.</li>
+                                </ul>
+                            </div>
+                            <!--/.card-body -->
+                        </div>
+                        <!-- /.card -->
+                    </div>
+                    <!--/column -->
+                    <div class="col-sm-8 col-md-6 col-lg-4 mx-auto">
+                        <div class="card shadow-lg">
+                            <figure class="card-img-top shadow-b">
+                                <a><img class="img-fluid" src="./assets/img/photos/repremar8.jpg"></a>
+                            </figure>
+                            <div class="card-body p-6">
+                                <h3 class="fs-21 mb-0 text-center">PORT OPERATIONS</h3>
+                                <ul class="post-meta fs-16 mb-0 text-justify">
+                                    <li>Stevedoring, Loading/Discharging vessels,
+                                        logistics within Port premises,
+                                        Free Port Regime, etc.</li>
+                                </ul>
+                            </div>
+                            <!--/.card-body -->
+                        </div>
+                        <!-- /.card -->
+                    </div>
+                    <!--/column -->
+                </div>
+                <!--/.row -->
             </div>
-            <!-- /.card -->
-          </div>
-          <!--/column -->
-          <div class="col-sm-8 col-md-6 col-lg-4 mx-auto">
-            <div class="card shadow-lg">
-              <figure class="card-img-top">
-                <a><img class="img-fluid" src="./assets/img/photos/ChatGPT Image 23 abr 2025, 12_27_04.jpg" /></a>
-              </figure>
-              <div class="card-body p-6">
-                <h3 class="fs-21 mb-0">BACK-OFFICE</h3>
-                <ul class="post-meta fs-16 mb-0">
-                  <li>To the liner shipping companies which provide regular line container services, we offer all type
-                    of back-office services, such as: handling and processing all shipping documents for import/export
-                    activities, control of equipment and container logistics, collection of freight charges and
-                    remittances, issuance of pro forma invoices for every port of call, accounting services, management
-                    and settlement of accounts, dealing with claims and processing statistical reports.</li>
-                </ul>
-              </div>
-              <!--/.card-body -->
-            </div>
-            <!-- /.card -->
-          </div>
-          <!--/column -->
-          <div class="col-sm-8 col-md-6 col-lg-4 mx-auto">
-            <div class="card shadow-lg">
-              <figure class="card-img-top shadow-b">
-                <a><img class="img-fluid" src="./assets/img/photos/repremar8.jpg"></a>
-              </figure>
-              <div class="card-body p-6">
-                <h3 class="fs-21 mb-0">PORT OPERATIONS</h3>
-                <ul class="post-meta fs-16 mb-0">
-                  <li>Stevedoring, Loading/Discharging vessels,
-                    logistics within Port premises,
-                    Free Port Regime, etc.</li>
-                </ul>
-              </div>
-              <!--/.card-body -->
-            </div>
-            <!-- /.card -->
-          </div>
-          <!--/column -->
-        </div>
-        <!--/.row -->
-      </div>
-      <!-- /.container -->
-    </section>
+            <!-- /.container -->
+        </section>
     <!-- /section -->
     <section class="wrapper image-wrapper bg-image bg-overlay text-white"
       data-image-src="./assets/img/photos/crane-lifting-shipping-containers-seaport.jpg">
