--- a/shipping/nueva2025/clients.html
+++ b/shipping/nueva2025/clients.html
@@ -282,6 +282,13 @@
               <div class="col">
                 <div
                   style="padding:10px; box-sizing:border-box; display:flex; align-items:center; justify-content:center; height:120px;">
+                  <img src="./assets/img/brands/hongfa.jfif" alt=""
+                    style="max-height:100px; max-width:100%; object-fit:contain; display:block;" />
+                </div>
+              </div>
+              <div class="col">
+                <div
+                  style="padding:10px; box-sizing:border-box; display:flex; align-items:center; justify-content:center; height:120px;">
                   <img src="./assets/img/brands/bergebulk.png" alt=""
                     style="max-height:100px; max-width:100%; object-fit:contain; display:block;" />
                 </div>
