--- a/logistics/news.html
+++ b/logistics/news.html
@@ -113,188 +113,10 @@
           <!-- /.container -->
         </nav>
         <!-- /.navbar -->
-        <section id="home">
-          <br>
-          <br>
-          <div class="wrapper bg-gray">
-            <div class="container pt-10 pt-md-14 pb-14 pb-md-17 text-center">
-              <div class="row text-center">
-                <div class="col-lg-9 col-xxl-7 mx-auto" data-cues="zoomIn" data-group="welcome" data-interval="-200">
-                  <h2 class="display-1 mb-4">China modificó
-                    sus reglas de
-                    exportación</h2>
-                  <p class="lead fs-24 lh-sm px-md-5 px-xl-15 px-xxl-10">DESDE EL 1ERO. DE OCTUBRE</p>
-                </div>
-                <!-- /column -->
-              </div>
-              <!-- /.row -->
-              <div class="row text-center mt-10">
-                <div class="col-md-10 offset-md-1 col-lg-8 offset-lg-2">
-                  <figure><img class="w-auto" src="./assets/img/photos/port.jpg"
-                      srcset="./assets/img/illustrations/i8@2x.png 2x" alt="" /></figure>
-                </div>
-                <!-- /column -->
-              </div>
-              <!-- /.row -->
-            </div>
-            <!-- /.container -->
-          </div>
-          <!-- /.wrapper -->
-        </section>
-        <!-- /section -->
-        <section class="wrapper bg-light">
-          <div class="container py-14 py-md-16 text-center">
-            <div class="row">
-              <div class="col-md-9 col-lg-7 col-xl-7 mx-auto text-center">
-                <img src="./assets/img/icons/lineal/check-list.svg" class="svg-inject icon-svg icon-svg-md mb-4"
-                  alt="" />
-                <h2 class="display-4 mb-3">Actualización:</h2>
-                <p class="lead fs-lg mb-6 px-xl-10 px-xxl-15">China ha modificado estrictamente sus
-                  reglas de exportación y la nueva normativa
-                  de la Administración Estatal de Impuestos
-                  de China (STA — State Taxation
-                  Administration) que prohibe el modelo “Buy
-                  Export” entró en vigencia el pasado 01/10.<br><br>Una de las medidas más importante
-                  requiere que el exportador registrado en
-                  aduanas sea una empresa formal con
-                  licencia de exportación, eliminando de esta
-                  forma los “terceros intermediarios”.
-                  De esta forma, se busca garantizar el
-                  correcto manejo fiscal y documental de las
-                  exportaciones.</p>
-              </div>
-              <!-- /column -->
-            </div>
-            <!-- /.row -->
-          </div>
-          <!-- /.container -->
-        </section>
-        <!-- /section -->
-        <section class="wrapper bg-light wrapper-border">
-          <div class="container py-14 py-md-16">
-            <div class="row gy-10 gy-sm-13 gx-lg-3 align-items-center">
-              <div class="col-md-8 col-lg-6 position-relative">
-                <div class="shape bg-dot primary rellax w-17 h-21" data-rellax-speed="1"
-                  style="top: -2rem; left: -1.9rem;"></div>
-                <div class="shape rounded bg-soft-primary rellax d-md-block" data-rellax-speed="0"
-                  style="bottom: -1.8rem; right: -1.5rem; width: 85%; height: 90%; "></div>
-                <figure class="rounded"><img src="./assets/img/photos/oceanfreights5.jpg"
-                    srcset="./assets/img/photos/about7@2x.jpg 2x" alt="" /></figure>
-              </div>
-              <!--/column -->
-              <div class="col-lg-5 col-xl-4 offset-lg-1">
-                <h2 class="h1 mb-3">Principales Ajustes:</h2>
-                <div class="d-flex flex-row mb-6">
-                  <div>
-                    <span class="icon btn btn-circle btn-primary pe-none me-5"><span
-                        class="number fs-18">1</span></span>
-                  </div>
-                  <div>
-                    <h4 class="mb-1">Se necesitará registro obligatorio
-                      ante las autoridades fiscales.</h4>
-                  </div>
-                </div>
-                <div class="d-flex flex-row mb-6">
-                  <div>
-                    <span class="icon btn btn-circle btn-primary pe-none me-5"><span
-                        class="number fs-18">2</span></span>
-                  </div>
-                  <div>
-                    <h4 class="mb-1">Significa el final inmediato de las declaraciones
-                      con licencias de terceros.</h4>
-                  </div>
-                </div>
-                <div class="d-flex flex-row mb-6">
-                  <div>
-                    <span class="icon btn btn-circle btn-primary pe-none me-5"><span
-                        class="number fs-18">3</span></span>
-                  </div>
-                  <div>
-                    <h4 class="mb-1">La fábrica debe figurar en aduana con
-                      todos los datos necesarios.</h4>
-                  </div>
-                </div>
-                <div class="d-flex flex-row mb-6">
-                  <div>
-                    <span class="icon btn btn-circle btn-primary pe-none me-5"><span
-                        class="number fs-18">4</span></span>
-                  </div>
-                  <div>
-                    <h4 class="mb-1">Los envíos que sigan utilizando el modelo
-                      “Buy Export” corren un alto riesgo de ser
-                      bloqueados en la aduana china.</h4>
-                  </div>
-                </div>
-              </div>
-              <!--/column -->
-            </div>
-            <!--/.row -->
-          </div>
-          <!-- /.container -->
-        </section>
-        <!-- /section -->
-        <section class="wrapper bg-light">
-          <div class="container py-14 py-md-16">
-            <div class="row gx-lg-8 gx-xl-12 gy-10 align-items-center">
-              <div class="col-lg-7">
-                <figure><img class="w-auto" src="./assets/img/photos/containerportada.jpg"
-                    srcset="./assets/img/illustrations/i9@2x.png 2x" alt="" /></figure>
-              </div>
-              <!--/column -->
-              <div class="col-lg-5">
-                <h3 class="display-4 mb-6">¿Qué Significa?</h3>
-                <div class="row gy-4">
-                  <div class="col-md-6">
-                    <h4><span class="text-primary">1.</span> Mayor trazabilidad: los documentos oficiales
-                      deberán provenir directamente del proveedor
-                      con licencia.</h4>
-                  </div>
-                  <div class="col-md-6">
-                    <h4><span class="text-primary">2.</span> Mayor control regulatorio.</h4>
-                  </div>
-                  <div class="col-md-6">
-                    <h4><span class="text-primary">3.</span> Pymes y empresas de Latinoamérica deberán
-                      contratar exportadores formales, eliminando
-                      intermediarios.</h4>
-                  </div>
-                  <div class="col-md-6">
-                    <h4><span class="text-primary">4.</span> Además, se exigirán controles más estrictos
-                      para productos con aplicaciones civiles y
-                      militares.</h4>
-                  </div>
-                  <!--/column -->
-                </div>
-                <!--/.row -->
-              </div>
-              <!--/column -->
-            </div>
-            <!--/.row -->
-          </div>
-          <!-- /.container -->
-        </section>
-        <!-- /section -->
-        <section class="wrapper bg-light">
-          <div class="container py-14 py-md-16 text-center">
-            <div class="row">
-              <div class="col-md-9 col-lg-7 col-xl-7 mx-auto text-center">
-                <img src="./assets/img/icons/lineal/check-2.svg" class="svg-inject icon-svg icon-svg-md mb-4"
-                  alt="" />
-                <h2 class="display-4 mb-3">Nuestras Recomendaciones:</h2>
-                <p class="lead fs-lg mb-6 px-xl-10 px-xxl-15">Corroborar que tus proveedores cuenten
-                  con licencia propia.<br><br>
-                  Tener en cuenta la posibilidad de que surjan
-                  mayores demoras y un aumento en los costos.<br><br>
-                  Cumplir con todas las normativas, ya que se
-                  pueden desencadenar retrasos documentales,
-                  sanciones aduaneras o pérdida de
-                  confiabilidad en sus embarques.</p>
-              </div>
-              <!-- /column -->
-            </div>
-            <!-- /.row -->
-          </div>
-          <!-- /.container -->
-        </section>
+</head>
+<body>
+  <iframe src="/assets/pdfchina.pdf"></iframe>
+</body>
     </div>
     <!-- /.content-wrapper -->
     <footer class="bg-dark text-inverse">
