--- a/logistics/news.html
+++ b/logistics/news.html
@@ -115,7 +115,7 @@
         <!-- /.navbar -->
 </head>
 <body>
-  <iframe src="/assets/pdfchina.pdf"></iframe>
+  <iframe src="newschina.pdf"></iframe>
 </body>
     </div>
     <!-- /.content-wrapper -->
