--- a/logistics/news.html
+++ b/logistics/news.html
@@ -1,99 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="es">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Forwarder, Freight, Montevideo, Uruguay, Asuncion, Paraguay, Logistics Partner.">
-  <meta name="keywords"
-    content="Logistics, Forwarder, Freight Forwarder, Forwarder in Uruguay, Logistics Trust, Move Cargo, Project Cargo, Ocean Freight, air Freight, Terrestrial Freight">
-  <meta name="author" content="Repremar Group">
-  <title>Repremar Logistics</title>
-  <link rel="shortcut icon" href="./assets/img/faviconRep.png">
-  <link rel="stylesheet" href="./assets/css/plugins.css">
-  <link rel="stylesheet" href="./assets/css/style.css">
-  <link rel="stylesheet" href="./assets/css/colors/green.css">
-  <link rel="preload" href="./assets/css/fonts/urbanist.css" as="style" onload="this.rel='stylesheet'">
+  <meta charset="UTF-8">
+  <title>Mi Landing PDF</title>
   <style>
-    body {
+    html, body {
       margin: 0;
-      height: 100vh;
-      background-color: #111;
-      display: flex;
-      justify-content: center;
-      align-items: center;
+      padding: 0;
+      height: 100%;
+      overflow: hidden;
     }
-
-    iframe {
-      width: 90%;
-      height: 95%;
+    embed {
+      width: 100%;
+      height: 100vh;
       border: none;
-      box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
     }
   </style>
 </head>
 <body>
-  <iframe src="newschina.pdf"></iframe>
+  <embed src="newschina.pdf" type="application/pdf">
 </body>
-</div>
-<!-- /.content-wrapper -->
-<footer class="bg-dark text-inverse">
-  <div class="container py-13 py-md-15">
-    <div class="row gy-6 gy-lg-0">
-      <div class="col-md-4 col-lg-3">
-        <div class="widget">
-          <img class="mb-4" src="./assets/img/LogisticsHorizontalBlanco.png"
-            srcset="./assets/img/LogisticsHorizontalBlanco.png 2x" alt="" />
-          <p class="mb-4">©
-            <script>
-              document.write(new Date().getUTCFullYear());
-            </script> Repremar Logistics. <br class="d-none d-lg-block" />All rights reserved.
-          </p>
-          <nav class="nav social social-white">
-            <a href="https://www.instagram.com/repremarlogistics/"><i class="uil uil-instagram"></i></a>
-            <a href="https://www.linkedin.com/company/repremar-logistics"><i class="uil uil-linkedin"></i></a>
-          </nav>
-          <!-- /.social -->
-        </div>
-        <!-- /.widget -->
-      </div>
-      <!-- /column -->
-      <div class="col-md-4 col-lg-3">
-        <div class="widget">
-          <h4 class="widget-title text-white mb-3">Contacto</h4>
-          <address class="pe-xl-15 pe-xxl-17">Misiones 1372, 6th floor, Montevideo, Uruguay</address>
-          <a href="mailto:info.logistics@repremar.com">info.logistics@repremar.com</a><br /> <a
-            href="tel:+59829169416">+598 2916 9416</a>
-        </div>
-        <!-- /.widget -->
-      </div>
-      <!-- /column -->
-      <div class="col-md-4 col-lg-3">
-        <div class="widget">
-          <h4 class="widget-title text-white mb-3">Saber más</h4>
-          <ul class="list-unstyled  mb-0">
-            <li><a href="aboutLogistics_es.html">Sobre nosotros</a></li>
-            <li><a href="Project_es.html">Proyectos</a></li>
-          </ul>
-        </div>
-        <!-- /.widget -->
-      </div>
-      <!-- /column -->
-
-      <!-- /column -->
-    </div>
-    <!--/.row -->
-  </div>
-  </div>
-  <!-- /.container -->
-</footer>
-<div class="progress-wrap">
-  <svg class="progress-circle svg-content" width="100%" height="100%" viewBox="-1 -1 102 102">
-    <path d="M50,1 a49,49 0 0,1 0,98 a49,49 0 0,1 0,-98" />
-  </svg>
-</div>
-<script src="./assets/js/plugins.js"></script>
-<script src="./assets/js/theme.js"></script>
-</body>
-
 </html>
