--- a/logistics/news.html
+++ b/logistics/news.html
@@ -22,7 +22,7 @@
   <div id="pdf-container"></div>
 
   <script>
-    const url = 'https://www.repremar.com/logistics/newchina.pdf'; // tu PDF
+    const url = 'https://www.repremar.com/logistics/newschina.pdf'; // tu PDF
 
     const container = document.getElementById('pdf-container');
     const loadingTask = pdfjsLib.getDocument(url);
