--- a/logistics/news.html
+++ b/logistics/news.html
@@ -14,7 +14,7 @@
     #pdf-container {
       width: 100%;
       max-width: 900px; /* 🔹 límite de ancho */
-      background: white;
+      background: #004B87;
       box-shadow: 0 0 12px rgba(0,0,0,0.1);
       padding: 20px 0;
     }
