--- a/logistics/index.html
+++ b/logistics/index.html
@@ -497,7 +497,7 @@
   <script>
     window.ChatKit.mount({
       workflowId: "wf_68fa7d089148190bb401c25bc0719360acefc195d9fc374",
-      version: "draft", // o quitá esta línea si ya lo pusiste en producción
+      version: "draft", // o quitá esta línea si ya lo pusiste en producciónasd
       container: document.body, // o un div específico si querés
       theme: "light", // "dark" o "light"
     });
