--- a/logistics/index.html
+++ b/logistics/index.html
@@ -499,7 +499,7 @@
       workflowId: "wf_68fa7d089148190bb401c25bc0719360acefc195d9fc374",
       version: "draft", // o quitá esta línea si ya lo pusiste en producciónasd
       container: document.body, // o un div específico si querés
-      theme: "light", // "dark" o "light"
+      theme: "dark", // "dark" o "light"
     });
   </script>
 </body>
