--- a/logistics/index.html
+++ b/logistics/index.html
@@ -494,7 +494,7 @@
 
   <!-- ChatKit-style custom chat powered by Netlify + OpenAI -->
   <link rel="preconnect" href="https://cdn.openai.com">
-  <link rel="stylesheet" href="https://cdn.openai.com/common/fonts/openai-sans/v2/openai-sans.css">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
 
   <style>
     /* ChatKit-like layout */
@@ -512,7 +512,8 @@
       flex-direction: column;
       overflow: hidden;
       z-index: 9999;
-      font-family: "OpenAI Sans", system-ui, sans-serif;
+      font-family: 'Inter', system-ui, sans-serif;
+
     }
 
     #chatkit-header {
