--- a/logistics/aitesting/index.html
+++ b/logistics/aitesting/index.html
@@ -525,7 +525,7 @@
     }
 
     #chatkit-header {
-      background: linear-gradient(90deg, #0b5fff, #0040ff);
+      background: linear-gradient(90deg, #0b5fff, #102f69);
       color: #fff;
       font-weight: 600;
       text-align: center;
@@ -551,7 +551,7 @@
     }
 
     .msg-user {
-      background: #0b5fff;
+      background: #102f69;
       color: #fff;
       margin-left: auto;
       border-bottom-right-radius: 0;
@@ -580,7 +580,7 @@
     }
 
     #chatkit-send {
-      background: #0b5fff;
+      background: #102f69;
       border: none;
       color: #fff;
       padding: 0 18px;
@@ -595,7 +595,7 @@
       right: 25px;
       width: 60px;
       height: 60px;
-      background: linear-gradient(135deg, #0b5fff, #0040ff);
+      background: linear-gradient(135deg, #102f69, #102f69);
       border-radius: 50%;
       box-shadow: 0 0 20px rgba(11, 95, 255, 0.4);
       cursor: pointer;
