--- a/logistics/aitesting/index.html
+++ b/logistics/aitesting/index.html
@@ -699,10 +699,10 @@
         <b>Origen:</b> ${carga.origen}<br>
         <b>Destino:</b> ${carga.destino}<br>
         <b>Transportista:</b> ${carga.transportista}<br>
-        <b>Fecha de salida:</b> ${carga.fechaSalida}<br>
-        <b>Fecha estimada de llegada:</b> ${carga.fechaEstimadaLlegada}<br>
+        <b>ETD:</b> ${carga.etd}<br>
+        <b>ETD</b> ${carga.eta}<br>
         <b>Agente:</b> ${carga.agente}<br>
-        <b>Número de cliente:</b> ${carga.numeroCliente}
+        <b>Número Cliente:</b> ${carga.numeroCliente}
       </div>
     </div>
   `;
