--- a/logistics/aitesting/index.html
+++ b/logistics/aitesting/index.html
@@ -639,7 +639,7 @@
   <div id="chatkit-wrapper">
     <div id="chatkit-header">Repremar Virtual Assistant</div>
     <div id="chatkit-messages">
-      <div class="msg-bot">👋 Coming soon...<br>Para realizar consultas, ingrese su usuario del portal de tracking.
+      <div class="msg-bot">Para realizar consultas, ingrese su usuario del portal de tracking.<br>"usuario contraseña".
       </div>
     </div>
     <div id="chatkit-inputbox">
