--- a/logistics/aitesting/index.html
+++ b/logistics/aitesting/index.html
@@ -694,7 +694,7 @@
       margin-top:8px;
       box-shadow:0 2px 6px rgba(0,0,0,0.4);
     ">
-      <h4 style="margin:0 0 8px 0;color:#0b5fff;">📦 Detalles de la carga</h4>
+      <h4 style="margin:0 0 8px 0;color:#0b5fff;">🚢 Detalles de la carga</h4>
       <div style="font-size:14px;line-height:1.6;">
         <b>Origen:</b> ${carga.origen}<br>
         <b>Destino:</b> ${carga.destino}<br>
