--- a/logistics/aitesting/2/index.html
+++ b/logistics/aitesting/2/index.html
@@ -14,8 +14,8 @@
   <link rel="stylesheet" href="./assets/css/style.css">
   <link rel="stylesheet" href="./assets/css/colors/green.css">
   <link rel="preload" href="./assets/css/fonts/urbanist.css" as="style" onload="this.rel='stylesheet'">
-  <script src="https://cdn.platform.openai.com/deployments/chatkit/chatkit.js" data-openai-beta="chatkit_beta=v1"
-    defer></script>
+  <script src="https://cdn.platform.openai.com/v1/agents/agt_12345/chat.js" defer></script>
+
 </head>
 
 <body>
